@@ -1,6 +1,6 @@
 # define	MAJ_VERSION	2
 # define	MIN_VERSION	1
-int	version_build_no = 43;
-# define VERSION_BUILD_NO 43
-char	version_build_date[] = "Sun Sep  4 22:23:14 2011";
+int	version_build_no = 44;
+# define VERSION_BUILD_NO 44
+char	version_build_date[] = "Wed Sep  7 23:01:56 2011";
 
